<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.rrpictureproductions.udacity.portfolio.MainActivity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_vertical_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@color/colorPrimary"
    android:gravity="center">
    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="270sp"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingBottom="8dp">
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/app_name"
                android:textSize="24sp"
                android:gravity="center"
                android:textColor="@android:color/white"/>
            <ImageView
                android:id="@+id/portfolioGitHub"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/AppTheme.GitHubButton"/>
        </LinearLayout>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/subtitle"
            android:textColor="@android:color/white"
            android:paddingBottom="16dp"
            android:gravity="center"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center">
            <Button
                android:id="@+id/popularMoviesButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/popular_movies"/>
            <ImageView
                android:id="@+id/popularMoviesGitHub"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/AppTheme.GitHubButton"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center">
            <Button
                android:id="@+id/stockHawkButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/stock_hawk"/>
            <ImageView
                android:id="@+id/stockHawkGitHub"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/AppTheme.GitHubButton"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center">
            <Button
                android:id="@+id/buildItBiggerButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/build_it_bigger"/>
            <ImageView
                android:id="@+id/buildItBiggerGitHub"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/AppTheme.GitHubButton"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center">
            <Button
                android:id="@+id/makeMaterialButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/make_your_app_material"/>
            <ImageView
                android:id="@+id/makeMaterialGitHub"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/AppTheme.GitHubButton"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center">
            <Button
                android:id="@+id/goUbiquitousButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/go_ubiquitous"/>
            <ImageView
                android:id="@+id/goUbiquitousGitHub"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/AppTheme.GitHubButton"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center">
            <Button
                android:id="@+id/capstoneButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textColor="@android:color/white"
                android:backgroundTint="#651FFF"
                android:text="@string/capstone"/>
            <ImageView
                android:id="@+id/capstoneGitHub"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/AppTheme.GitHubButton"/>
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>